# rho-agent

./: .coverage  .gitignore  .pre-commit-config.yaml  ARCHITECTURE.md  Hyperagents.txt  LICENSE  README.md  install.sh  main.py  pyproject.toml  terminal-bench-sample.yaml
.github/: dependabot.yml
.github/workflows/: dispatch-site-docs.yml  lint.yml  release-pypi.yml  test.yml
demo/: README.md  app.py  programmatic_usage.py  seed_database.py
docs/site/: api-reference.md  architecture.md  cli-reference.md  continuum.md  daytona.md  faq.md  index.md  installation.md  monitor.md  observability.md  profiles.md  prompt-files.md  python-sdk.md  quickstart.md  runtime-api.md  tools.md
examples/: README.md  basic_agent.py  job-failure.yaml  programmatic_usage.py
examples/log_debugger/: README.md  debug.md  run.py
examples/sql_explorer/: .demo-databases.yaml  README.md  app.py  seed_database.py
rho_agent/: __init__.py  cli.py  cli_errors.py  context_export.py  signals.py
rho_agent/capabilities/: __init__.py  factory.py
rho_agent/capabilities/profiles/: daytona.yaml  developer-bash-only.yaml  eval.yaml  readonly.yaml
rho_agent/cli/: __init__.py  admin.py  completion.py  context_export.py  errors.py  events.py  export_cmd.py  formatting.py  interactive.py  main_cmd.py  monitor.py  single.py  state.py  theme.py
rho_agent/client/: __init__.py  litellm_client.py  model.py
rho_agent/command_center/: __init__.py  app.py  commands.py  layout.tcss  models.py
rho_agent/command_center/modals/: __init__.py  launch_agent_modal.py
rho_agent/command_center/services/: __init__.py  control_plane.py  launcher.py  local_signal_transport.py  telemetry_feed.py  transport.py
rho_agent/command_center/widgets/: __init__.py  agent_list.py  command_input.py  detail_panel.py  trajectory_view.py
rho_agent/conductor/: README.md  __init__.py  cli.py  git_ops.py  models.py  planner.py  prompts.py  reviewer.py  scheduler.py  state.py  worker.py
rho_agent/config/: __init__.py  databases.example.yaml  databases.py
rho_agent/continuum/: README.md  __init__.py  checks.py  cli.py  handoffs.py  loop.py  models.py  state.py
rho_agent/continuum/prompts/: agent.md
rho_agent/control/: __init__.py  models.py
rho_agent/control/services/: __init__.py  control_plane.py  factory.py  local_signal_transport.py  postgres_transport.py  transport.py
rho_agent/core/: __init__.py  agent.py  config.py  conversations.py  events.py  observers.py  session.py  session_store.py  state.py  truncate.py
rho_agent/eval/: __init__.py  cli.py
rho_agent/eval/agentbench/: README.md  __init__.py  cerebras_client.py  cli.py  config.py  runner.py
rho_agent/eval/birdbench/: README.md  __init__.py  cli.py  config.py  evaluator.py  output.py  runner.py  task.py  tools.py
rho_agent/eval/harbor/: README.md  __init__.py  agent.py  cli.py  install-rho-agent.sh.j2  runner.py  trajectory.py
rho_agent/evolve/: README.md  __init__.py  archive.py  cli.py  harness.py  loop.py  models.py  workspace.py
rho_agent/evolve/harnesses/: __init__.py  bird_bench.py  docker_bash.py  paper_review.py  terminal_bench.py
rho_agent/evolve/prompts/: meta_agent.md
rho_agent/export/: README.md  __init__.py  atif.py
rho_agent/observability/: __init__.py  config.py  context.py  heartbeat.py  processor.py
rho_agent/observability/benchmarks/: README.md  sqlite_process_bench.py  sqlite_thread_bench.py
rho_agent/observability/dashboard/: __init__.py  app.py
rho_agent/observability/exporters/: __init__.py  base.py  postgres.py  sqlite.py
rho_agent/observability/realtime/: __init__.py  local_feed.py  postgres_stream.py  protocol.py
rho_agent/observability/storage/: __init__.py  factory.py  postgres.py  postgres_schema.sql  protocol.py  sqlite.py
rho_agent/permissions/: __init__.py  factory.py
rho_agent/permissions/profiles/: readonly.yaml  unrestricted.yaml
rho_agent/prompts/: __init__.py  default.md  eval_bird.md  eval_os.md  eval_reviewer.md  eval_terminal.md  loader.py  renderer.py
rho_agent/runtime/: README.md  __init__.py  builder.py  cancellation.py  daytona.py  dispatch.py  factory.py  lifecycle.py  options.py  protocol.py  reconfigure.py  registry_extensions.py  run.py  store.py  types.py
rho_agent/signals/: __init__.py
rho_agent/tools/: __init__.py  base.py  registry.py
rho_agent/ui/: __init__.py  theme.py
ro_agent/: __init__.py  cli.py
ro_agent/capabilities/: factory.py
ro_agent/client/: model.py
ro_agent/config/: __init__.py  databases.example.yaml  databases.py
ro_agent/core/: agent.py  session.py
ro_agent/eval/: README.md  cli.py  config.py  output.py  runner.py
ro_agent/harbor/: __init__.py  agent.py  job.yaml  runner.py
ro_agent/prompts/: eval_dbbench.md
ro_agent/templates/: __init__.py  loader.py  renderer.py
ro_agent/tools/: base.py  registry.py
scripts/: run_evolve_paper_review.sh
tests/: __init__.py  test_agent_launcher.py  test_agent_tool_handler.py  test_atif_export.py  test_bash_restrictions.py  test_cli_mode_switch.py  test_cli_monitor_connect.py  test_cli_routing_default_tui.py  test_cli_single_status.py  test_command_center_control_plane.py  test_command_center_local_signal_transport.py  test_command_center_textual_app_smoke.py  test_command_center_textual_ui_flows.py  test_conductor.py  test_connect_signals.py  test_context_export.py  test_database_config.py  test_daytona_handlers.py  test_delegate_handler.py  test_evolve.py  test_litellm_cost.py  test_observability_processor.py  test_observability_sqlite_resilience.py  test_permissions.py  test_prompt_loading.py  test_registry.py  test_runtime_builder_path.py  test_runtime_interruption.py  test_runtime_observability_lifecycle.py  test_session.py  test_signals_controls.py  test_state.py  test_telemetry_feed.py  test_tool_factory.py  test_truncate.py
tests/command_center/: __init__.py  test_command_center_suite_smoke.py  test_launcher_stop_semantics.py  test_telemetry_feed_resilience.py
tests/eval/: __init__.py  test_agentbench_tools.py  test_harbor_agent.py  test_harbor_cli.py  test_harbor_trajectory.py
(+81 files in other folders)
